test/errors/error21.base
This function takes 2 arguments but 1 are passed
fun bar () {
   val x = foo(1);
           ^^^^^
